# scyros

./: .gitignore  CHANGELOG.md  CITATION.cff  Cargo.toml  NOTICE  README.md  flake.nix
.cargo-husky/hooks/: pre-commit
.github/workflows/: ci.yml  rust_test.yml
.metals/: metals.lock.db  metals.mv.db
src/: lib.rs  shell_commands.rs
src/docs/: download.md  duplicate_files.md  duplicate_ids.md  filter_languages.md  parse.md  pull_request.md
src/phases/: download.rs  duplicate_files.rs  duplicate_ids.rs  extract_benchmarks.rs  filter_languages.rs  filter_metadata.rs  forks.rs  ids.rs  languages.rs  metadata.rs  mod.rs  parse.rs  pull_request.rs
src/utils/: bow.rs  change_char.rs  csv.rs  dataframes.rs  error.rs  fs.rs  github.rs  github_api.rs  json.rs  logger.rs  mod.rs  regex.rs  temp.rs
tests/data/: dummy_tokens.csv  invalid_csv.csv  max_float.c  small_file.csv  two_tokens_same_line.csv
tests/data/keywords/: c++_float.json  c_float.json  fp_others.json  fp_transcendental.json  fp_types.json  java_float.json  long_double.json  scala_float.json  std_math.json
tests/data/phases/download/: to_download.csv  to_download.csv.file_log.csv.expected  to_download.csv.project_log.csv.expected  to_download.csv.with_lang.expected  to_download_local.csv  to_download_local.csv.file_log.csv.expected  to_download_local.csv.project_log.csv.expected
tests/data/phases/duplicate_files/: duplicate_files.csv  duplicate_files.csv.duplicates_map.csv.expected  duplicate_files.csv.unique.csv.expected  duplicate_files_bow.csv.duplicates_map.csv.expected  (+1 more)
(+124 files in other folders)
