[package]
name = "skyscraper"
authors = ["Andrea Gilot <andrea.gilot@it.uu.se>"]
edition = "2018"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc="*"

[dependencies]
blake3 ="1.8.2"
byteorder="1.3.4"
chrono="0.4.40"
clang = "2.0.0"
clap = {version = "4.5.32", features=["derive","wrap_help"]}
console = "0.15.11"
crossbeam="0.7"
crossbeam-channel="0.5.0"
csv="1.1"
curl="0.4"
indicatif = "0.17.9"
json="0.12"
lazy_static = "1.4.0"
num-traits = "0.2"
pathdiff = "0.2.3"
petgraph = "0.8.2"
polars = { version = "0.46.0", features = ["lazy", "csv", "strings", "is_in"] }
rand="0.8.5"
regex="1.5.4"
reqwest = { version = "0.12", features = ["blocking"] }
snafu="0.8.5"
tree-sitter = "0.25.3"
tree-sitter-c = "0.23.4"
tree-sitter-cpp = "0.23.4"
tree-sitter-java = "0.23.5"
tree-sitter-fortran = "0.5.0"
tree-sitter-python = "0.23.6"
tree-sitter-typescript = "0.23.2"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-go = "0.23.4"
tree-sitter-scala = "0.24.0"
walkdir = "2.5.0"


[profile.release]
debug = true

[lints.clippy]
should_implement_trait = "allow"
type_complexity = "allow"
too_many_arguments = "allow"

[[bin]]
name = "skyscraper"
path = "src/bin/main.rs"

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false
features = ["precommit-hook", "run-cargo-check", "run-cargo-fmt", "run-cargo-clippy"]

